<resources>
    <string name="app_name">FileManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_for_permission_screen"><b>Dear User</b>,\nTo provide the best experience, our app needs certain permissions. Granting them ensures full functionality and improved usability. Your trust is important, and we use permissions responsibly.</string>
    <string name="allow">allow</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="file_extension">File extension</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="your_files">Your files</string>
    <string name="no_files_found">No files found</string>
    <string name="gb">gb</string>
    <string name="mb">mb</string>
    <string name="kb">kb</string>
    <string name="bytes">bytes</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>