<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.mainScreen.MainScreenFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/sortSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="sortTypesGroup,orderTypeGroup" />

    <TextView
        android:id="@+id/noFilesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_files_found"
        android:visibility="invisible"
        style="@style/BlackTextHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fileList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/orderTypeGroup"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/directoryName"
        style="@style/BlackTextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="start"
        android:maxLines="1"
        android:text="@string/your_files"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/sortButton"
        app:layout_constraintStart_toEndOf="@+id/arrowBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/sorting_icon"
        app:layout_constraintBottom_toBottomOf="@+id/directoryName"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/directoryName"
        app:tint="@color/black" />

    <RadioGroup
        android:id="@+id/sortTypesGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/directoryName">

        <RadioButton
            android:id="@+id/nameRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/name" />

        <RadioButton
            android:id="@+id/sizeRadioButton"
            android:layout_width="wrap_content"
            android:buttonTint="@color/blue"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/size" />
        <RadioButton
            android:id="@+id/dateRadioButton"
            android:layout_width="wrap_content"
            android:buttonTint="@color/blue"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />
        <RadioButton
            android:id="@+id/extensionRadioButton"
            android:layout_width="wrap_content"
            android:buttonTint="@color/blue"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/file_extension" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/orderTypeGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/sortTypesGroup">

        <RadioButton
            android:id="@+id/ascendingRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:checked="true"
            android:text="@string/ascending" />

        <RadioButton
            android:id="@+id/descendingRadioButton"
            android:layout_width="wrap_content"
            android:buttonTint="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/descending" />

        <androidx.constraintlayout.widget.Group
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/arrowBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_back_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/directoryName"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/navigateToLastModifiedButton"
        android:layout_width="wrap_content"
        android:background="@color/blue"
        android:backgroundTint="@color/blue"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:tint="@android:color/white"
        android:src="@drawable/last_modified_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4" />

</androidx.constraintlayout.widget.ConstraintLayout>